# frkn

./: .gitignore  .gitlab-ci.yml  README.md  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  byedpi_jni.c
app/src/main/cpp/byedpi/: VERSION  conev.h  extend.c  extend.h  packets.c  packets.h
app/src/main/java/io/github/yulbax/frkn/: FrknApplication.kt  MainActivity.kt
app/src/main/java/io/github/yulbax/frkn/data/: App.kt  AppConfigBackup.kt  AppDao.kt  AppDatabase.kt  SettingsDao.kt  SettingsEntity.kt
app/src/main/java/io/github/yulbax/frkn/di/: AppModule.kt
app/src/main/java/io/github/yulbax/frkn/engine/: ByeDpi.kt
app/src/main/java/io/github/yulbax/frkn/util/: AppSyncManager.kt  Diagnostics.kt  Format.kt  FrknLog.kt  Notifications.kt  Telemetry.kt
app/src/main/java/io/github/yulbax/frkn/vpn/: AutoConnect.kt  BootReceiver.kt  ByeDpiQuality.kt  ConnectWorker.kt  DefaultNetworkMonitor.kt  FrknVpnService.kt  HealthMonitor.kt  SocketProtector.kt  SocksProbe.kt  VpnCommandBus.kt  VpnNotificationController.kt  VpnState.kt  VpnStateRepository.kt
app/src/main/res/drawable/: ic_byedpi.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: locales_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build-libbox.sh
(+41 files in other folders)
